# okq

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/: dependabot.yml
.github/workflows/: release.yml
docs/: .okqignore  README.md  index.md
docs/adrs/: 0001-documentation-first-okf-shaped.md  0002-library-stack.md  0003-search-index-in-xdg-cache.md  0004-exit-code-taxonomy.md  0005-dogfood-okq-for-docs.md  0006-okqignore-filtering.md  0007-opt-in-network-for-skill-install.md  0008-scope-non-goals.md  0009-okf-spaces-fork.md  0010-okf-unicode-filenames-fork.md  0011-aliases-in-resolution.md  _template.md  index.md
docs/features/: _template.md  aliases.md  emoji-filenames.md  find.md  frontmatter-optional-title.md  get.md  graph.md  index-command.md  index.md  inline-tags.md  okqignore.md  phantom-links.md  scaffold.md  schema.md  search.md  skills-install.md  skills.md  stats.md  validate.md  wikilinks.md
docs/guides/: _template.md  design-overview.md  index.md
docs/tests/: README.md  aliases-tags-edge-cases.md  bad name!.md  duplicate-headings.md  frontmatter-is-list.md  frontmatter-is-scalar.md  headings-in-code-fence.md  invalid-yaml-flow.md  no-frontmatter.md  only-frontmatter.md  tab-indentation.md  tags-not-a-list.md  unicode-emoji.md  unterminated-frontmatter.md  wikilinks-malformed.md  🚀 launch.md
docs/tests/deeply/nested/: concept.md
docs/workflows/: _template.md  index.md
skills/okq-explore/: SKILL.md
skills/okq-maintain/: SKILL.md
skills/okq-reference/: SKILL.md
skills/okq-write-okf/: SKILL.md
src/: cli.rs  error.rs  graph.rs  ignore.rs  index.rs  lib.rs  main.rs  model.rs  sections.rs  tags.rs  templates.rs  view.rs  wikilinks.rs  yaml_json.rs
src/commands/: find.rs  get.rs  graph.rs  index.rs  mod.rs  scaffold.rs  schema.rs  search.rs  skills.rs  stats.rs  validate.rs
tests/: find.rs  get.rs  graph.rs  help.rs  ignore.rs  index.rs  robustness.rs  scaffold.rs  schema.rs  search.rs  skills.rs  stats.rs  validate.rs
tests/snapshots/: find__find_type_adr.snap  get__default_json.snap  get__section_json.snap  help__help_find.snap  help__help_get.snap  help__help_index.snap  help__help_main.snap  help__help_search.snap  help__help_skills.snap  help__help_skills_install.snap  help__help_validate.snap  schema__schema_get.snap
